# roster

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  REPORT.md  deny.toml  install.sh
.claude/agents/: sidekick.md
.claude/skills/land/: SKILL.md
.claude/skills/orchestrate/: SKILL.md
.claude/skills/preflight/: SKILL.md
.claude/skills/tune-detection/: SKILL.md
.github/workflows/: ci.yml  release.yml
crates/roster/: Cargo.toml
crates/roster-core/: Cargo.toml
crates/roster-core/src/: attention.rs  context.rs  grid.rs  layout.rs  lib.rs  session.rs  telemetry.rs
crates/roster-detect/: Cargo.toml  agents.toml
crates/roster-detect/src/: config.rs  destructive.rs  detector.rs  lib.rs  statusline.rs  track.rs
crates/roster-detect/tests/: classify_fixtures.rs  statusline_fixtures.rs
crates/roster-detect/tests/fixtures/aider/: blocked_add_file.txt  blocked_confirm_edit.txt  idle_prompt.txt  working_applying.txt  working_committing.txt
crates/roster-detect/tests/fixtures/claude-code/: blocked_allow_edit.txt  blocked_proceed.txt  blocked_proceed_bash_dialog.txt  blocked_wins_over_working.txt  composing_prompt.txt  composing_prompt_grown.txt  composing_wrapped_grown.txt  composing_wrapped_prompt.txt  done_after_spinner_work.txt  done_after_task.txt  done_flourish_manual_mode.txt  done_quoted_permission_text.txt  idle_placeholder_prompt.txt  idle_prompt.txt  startup_banner.txt  startup_banner_mcp_notice.txt  working_background_wait.txt  working_esc_hint.txt  working_quoted_permission_text.txt  working_spinner.txt  working_spinner_alt_frame.txt  working_spinner_only.txt  working_spinner_thinking.txt  working_task_status.txt
crates/roster-detect/tests/fixtures/codex/: blocked_approve.txt  idle_prompt.txt  working_running.txt  working_thinking.txt
crates/roster-detect/tests/fixtures/statusline/: full.json  garbage.txt  partial.json
crates/roster-proto/: Cargo.toml
crates/roster-proto/src/: lib.rs
crates/roster-pty/: Cargo.toml
crates/roster-pty/src/: lib.rs
crates/roster-pty/tests/: spawn.rs
crates/roster-term/: Cargo.toml
crates/roster-term/src/: lib.rs
crates/roster-tui/: Cargo.toml
crates/roster-tui/src/: confirm.rs  exited.rs  hit.rs  launcher.rs  lib.rs  menu.rs  pane.rs  rename.rs  sidebar.rs  style.rs  telemetry.rs  toast.rs
crates/roster-tui/tests/: render.rs
crates/roster/examples/: capture.rs
crates/roster/src/: app.rs  cli.rs  hook.rs  keys.rs  main.rs  server.rs
crates/roster/tests/: smoke.rs
docs/: 00-architecture.md  01-crates.md  02-state-detection.md  03-build-sequence.md  04-website.md  05-claude-native-attention.md
scripts/: check-arch.sh  metrics.sh
website/: components.json  next.config.mjs  package.json  vercel.json
website/app/: ClaudeMark.tsx  HeroBackdrop.tsx  InstallCommand.tsx  Navbar.tsx  Tagline.tsx  Wordmark.tsx  claude-lottie.json  globals.css  layout.tsx  page.tsx
website/app/demo/: DemoPane.tsx  RosterDemo.tsx
website/components/brainless/blocks/: claude-session.tsx
website/components/brainless/claude/: claude-diff.tsx  claude-header.tsx  claude-message.tsx  claude-permission.tsx  claude-prompt.tsx  claude-thinking.tsx  claude-todo-list.tsx  claude-tool-call.tsx
