[workspace]
resolver = "2"
members = ["crates/roster",
    "crates/roster-core",
    "crates/roster-detect", "crates/roster-pty", "crates/roster-term",
    "crates/roster-tui",
]

[workspace.package]
version = "0.0.5"
edition = "2021"
license = "MIT"
repository = "https://github.com/zidankazi/roster"

[workspace.lints.rust]
missing_docs = "warn"
