[workspace]
resolver = "2"
members = ["crates/roster",
    "crates/roster-core",
    "crates/roster-detect", "crates/roster-proto", "crates/roster-pty",
    "crates/roster-term", "crates/roster-tui",
]

[workspace.package]
version = "0.0.2"
edition = "2021"
license = "GPL-3.0-only"
repository = "https://github.com/zidankazi/roster"

[workspace.lints.rust]
missing_docs = "warn"
