[package]
name = "roster-detect"
description = "Agent identification, state classification, and per-agent config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
regex = "1.12.4"
roster-core = { path = "../roster-core" }
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"

[lints]
workspace = true
