[package]
name = "roster-pty"
description = "PTY allocation and agent child-process lifecycle"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
portable-pty = "0.9.0"

[lints]
workspace = true

[target."cfg(unix)".dependencies]
libc = "0.2.186"
