[package]
name = "roster-term"
description = "Terminal emulation: raw PTY bytes to a screen grid, via alacritty_terminal"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
alacritty_terminal = "0.26.0"
roster-core = { path = "../roster-core" }

[lints]
workspace = true
