[package]
name = "roster-tui"
description = "ratatui rendering: panes and the agent-state sidebar"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
roster-core = { path = "../roster-core" }
roster-detect = { path = "../roster-detect" }

[lints]
workspace = true
