[package]
name = "roster"
description = "Terminal multiplexer for coding agents"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ratatui = "0.30.2"
roster-core = { path = "../roster-core" }
roster-detect = { path = "../roster-detect" }
roster-pty = { path = "../roster-pty" }
roster-term = { path = "../roster-term" }
roster-tui = { path = "../roster-tui" }

[lints]
workspace = true
