[package]
name = "roster"
description = "Terminal multiplexer for Claude Code agents"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Direct dep only to turn on the paste event for the crossterm build that
# ratatui re-exports; all crossterm use goes through `ratatui::crossterm`.
crossterm = { version = "0.29", features = ["bracketed-paste"] }
libc = "0.2"
# Claude Code hook payloads arrive as JSON on stdin; hand-rolling a JSON
# parser is a correctness minefield, and serde is already in the tree via
# roster-detect's config loading.
serde_json = "1"
ratatui = "0.30.2"
roster-core = { path = "../roster-core" }
roster-detect = { path = "../roster-detect" }
roster-proto = { path = "../roster-proto" }
roster-pty = { path = "../roster-pty" }
roster-term = { path = "../roster-term" }
roster-tui = { path = "../roster-tui" }

[dev-dependencies]
roster-proto = { path = "../roster-proto" }

[lints]
workspace = true
